--- a/index.html
+++ b/index.html
@@ -229,19 +229,19 @@
         <script>
             const playerData = {
                 A: {
-                    labels: ['ErDanie34', 'Pablobop', 'Kakitamaster', 'Jugador 4', 'Jugador 5'],
+                    labels: ['Rezok2040', 'Chimquack', 'binguxs', 'kakitamaster', 'SrGnar'],
                     datasets: [
-                        { label: 'KDA', data: [0, 0, 0, 5.1, 3.0], backgroundColor: 'rgba(63, 81, 181, 0.6)' },
-                        { label: 'Kill Participation (%)', data: [0,0, 0, 90, 65], backgroundColor: 'rgba(76, 175, 80, 0.6)' },
-                        { label: 'CS/min', data: [0, 0, 0, 9.0, 6.5], backgroundColor: 'rgba(255, 193, 7, 0.6)' }
+                        { label: 'KDA', data: [0, 0, 0, 0, 0], backgroundColor: 'rgba(63, 81, 181, 0.6)' },
+                        { label: 'Kill Participation (%)', data: [0,0, 0, 0, 0], backgroundColor: 'rgba(76, 175, 80, 0.6)' },
+                        { label: 'CS/min', data: [0, 0, 0, 0, 0], backgroundColor: 'rgba(255, 193, 7, 0.6)' }
                     ]
                 },
                 B: {
-                    labels: ['Jugador 1', 'Jugador 2', 'Jugador 3', 'Jugador 4', 'Jugador 5'],
+                    labels: ['James991630', 'sustanon', 'AlejandroMag', 'D4dtor', 'balonix2004'],
                     datasets: [
-                        { label: 'KDA', data: [2.1, 3.7, 1.9, 4.0, 2.7], backgroundColor: 'rgba(63, 81, 181, 0.6)' },
-                        { label: 'Kill Participation (%)', data: [78, 65, 55, 68, 70], backgroundColor: 'rgba(76, 175, 80, 0.6)' },
-                        { label: 'CS/min', data: [8.8, 7.0, 8.1, 8.5, 7.3], backgroundColor: 'rgba(255, 193, 7, 0.6)' }
+                        { label: 'KDA', data: [0, 0, 0, 0, 0], backgroundColor: 'rgba(63, 81, 181, 0.6)' },
+                        { label: 'Kill Participation (%)', data: [0, 0, 0, 0, 0], backgroundColor: 'rgba(76, 175, 80, 0.6)' },
+                        { label: 'CS/min', data: [0, 0, 0, 0, 0], backgroundColor: 'rgba(255, 193, 7, 0.6)' }
                     ]
                 },
                 C: {
