--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <select id="filterTeam" onchange="updateStats()">
             <option value="none">Seleccionar equipo</option>
             <option value="A">Los Cuañaos</option>
-            <option value="B">Equipo B</option>
+            <option value="B">UnderDogs</option>
             <option value="C">Equipo C</option>
             <option value="D">Equipo D</option>
         </select>
